[INTERNAL] Table: fix for text alignment in column headers
When the column headers were wrapped into multiple lines, the text
alignment for the column header was incorrect. The column header text
now inherits the style from the Column.
BCP: 1980061059

--- a/src/sap.m/src/sap/m/themes/base/Table.less
+++ b/src/sap.m/src/sap/m/themes/base/Table.less
@@ -58,11 +58,13 @@ tr.sapMListTblHeaderNone > .sapMTableTH {
 }
 
 /**
- * For compatibility reasons text alignment should inherit from the table cells.
+ * For compatibility reasons text alignment should inherit from the table headers & cells.
  * Default value of textAlign property is Begin(not Initial) for the following controls
  * therefore they always set text-align as a style attribute in DOM, this blocks
- * alignment inheritance from the table cells.
+ * alignment inheritance from the table headers & cells.
  */
+.sapMColumnHeader > .sapMLabel,
+.sapMColumnHeader > .sapMText,
 .sapMListTblCell > .sapMSlt > .sapMSltLabel,
 .sapMListTblCell > .sapMObjectNumber,
 .sapMListTblCell > .sapMLabel,
